--- a/inductive.tex
+++ b/inductive.tex
@@ -568,9 +568,9 @@ and the perceptron model fails to classify the dataset correctly, see \cref{tab:
   fails to classify the XOR dataset correctly --- as any other perceptron would do.
 \end{tablebox}
 
-\begin{mainbox}{Think about\dots}
+\begin{hlbox}{Think about\dots}
   What happens if we remove $w_0$ from the model?
-\end{mainbox}
+\end{hlbox}
 
 \subsection{Multi-layer perceptron learning bias}
 
@@ -646,9 +646,9 @@ setting $\vec{w}^{(3)} = [0, 1, 1]$.
   \dots
 \end{tablebox}
 
-\begin{mainbox}{Think about\dots}
+\begin{hlbox}{Think about\dots}
   Note that there are many possible solutions for the XOR problem using the MLP.
-\end{mainbox}
+\end{hlbox}
 
 \subsection{Decision tree learning bias}
 
@@ -704,10 +704,10 @@ are orthogonal to the axes.  Consider the decision tree in \cref{fig:tree-and}.
   hyperplanes orthogonal to the axes.
 \end{figurebox}
 
-\begin{mainbox}{Think about\dots}
+\begin{hlbox}{Think about\dots}
   Decision tree are nonparametric models, one can easily increase the depth of the tree to
   fit the data.
-\end{mainbox}
+\end{hlbox}
 
 \subsection{$k$-nearest neighbors learning bias}
 
