--- a/planning.tex
+++ b/planning.tex
@@ -146,13 +146,13 @@ box plots or other distribution-based plots.  We can also use hypothesis tests t
 calculate the probability of the performance of the solution being better than a certain
 threshold.
 
-\begin{mainbox}{Evaluation \emph{vs.} validation}
+\begin{hlbox}{Evaluation \emph{vs.} validation}
   We call evaluation the process of assessing the performance of a solution using a
   test set.  Validation, on the other hand, is the process of interpreting or confirming
   the meaning of the evaluation results.  Validation is the process of determining the
   degree to which the evaluation results support the intended use of the solution (unseen
   data).
-\end{mainbox}
+\end{hlbox}
 
 \paragraph{Interpretation}  The results are not the ``real'' performance of the solution
 $M$ in the real world, as that would require new data to be collected.  However, we can
