--- a/data.tex
+++ b/data.tex
@@ -50,24 +50,24 @@ and predictive analytics.''}  They compare the area with the operations research
 that data science focuses on implementing data-driven decisions and managing their
 consequences.
 
-\begin{slidebox}{Zumel and Mount's definition}{}
-  \begin{itemize}
-    \item Cross-disciplinary practice that draws on methods from data
-    engineering, descriptive statistics, data mining, machine learning, and predictive
-    analytics.
-    \item Focuses on implementing data-driven decisions and managing their consequences.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Zumel and Mount's definition}{}
+%   \begin{itemize}
+%     \item Cross-disciplinary practice that draws on methods from data
+%     engineering, descriptive statistics, data mining, machine learning, and predictive
+%     analytics.
+%     \item Focuses on implementing data-driven decisions and managing their consequences.
+%   \end{itemize}
+% \end{slidebox}
 
 \textcite{Wickham2023} state that \emph{``data science is an exciting discipline that
 allows you to transform raw data into understanding, insight, and knowledge.''}
 
-\begin{slidebox}{Wickham's definition}{}
-  \begin{itemize}
-    \item Transform raw data into understanding, insight, and knowledge.
-    \item Not necessarily a definition; describes the purpose of data science.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Wickham's definition}{}
+%   \begin{itemize}
+%     \item Transform raw data into understanding, insight, and knowledge.
+%     \item Not necessarily a definition; describes the purpose of data science.
+%   \end{itemize}
+% \end{slidebox}
 
 I find the first definition too restrictive once new methods and techniques are always
 under development.  We never know when new ``data-related'' methods will become obsolete
@@ -95,34 +95,34 @@ quantified in some way\footnote{TODO: talk about non-measurable phenomena}.  \em
 that have not been subject to any other transformation by a software program or a human
 expert.  \emph{Data} is any piece of information that can be digitally stored.
 
-\begin{slidebox}{My definition}{}
-  \begin{itemize}
-    \item Data science is the study of computational methods to extract knowledge from
-      measurable phenomena.
-    \item Computational methods use computers to handle data and perform the calculations.
-    \item Knowledge is information that humans can easily understand or apply to solve
-      problems.
-    \item Measurable phenomena are events or processes where raw data can be quantified
-      in some way.
-    \item Raw data are data collected directly from some source and that have not been
-      subject to any other transformation by a software program or a human expert.
-    \item Data is any piece of information that can be digitally stored.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{My definition}{}
+%   \begin{itemize}
+%     \item Data science is the study of computational methods to extract knowledge from
+%       measurable phenomena.
+%     \item Computational methods use computers to handle data and perform the calculations.
+%     \item Knowledge is information that humans can easily understand or apply to solve
+%       problems.
+%     \item Measurable phenomena are events or processes where raw data can be quantified
+%       in some way.
+%     \item Raw data are data collected directly from some source and that have not been
+%       subject to any other transformation by a software program or a human expert.
+%     \item Data is any piece of information that can be digitally stored.
+%   \end{itemize}
+% \end{slidebox}
 
 \textcite{Kelleher2018} summarize very well the challenges data science takes up:
 ``extracting non-obvious and useful patterns from large data sets [\dots]; capturing,
 cleaning, and transforming [\dots] data; [storing and processing] big [\dots] data sets;
 and questions related to data ethics and regulation.''
 
-\begin{slidebox}{Kelleher and Tierney's challenges}{}
-  \begin{itemize}
-    \item Extracting non-obvious and useful patterns from large data sets.
-    \item Capturing, cleaning, and transforming data.
-    \item Storing and processing big data sets.
-    \item Questions related to data ethics and regulation.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Kelleher and Tierney's challenges}{}
+%   \begin{itemize}
+%     \item Extracting non-obvious and useful patterns from large data sets.
+%     \item Capturing, cleaning, and transforming data.
+%     \item Storing and processing big data sets.
+%     \item Questions related to data ethics and regulation.
+%   \end{itemize}
+% \end{slidebox}
 
 Data science contrasts with conventional sciences.  Usually, a ``science'' is named after
 its object of study.  Biology is the study of the life, Earth science studies the planet
@@ -168,14 +168,14 @@ reliable and ethical knowledge from huge amounts of data.
     new scientific questions -- such as data ethics, data collection, etc.
 \end{figurebox}
 
-\begin{slidebox}{Data science vs conventional sciences}{}
-  \begin{itemize}
-    \item Conventional sciences are model-driven: observation, hypothesis, and validation.
-    \item In data science, we extract the knowledge directly and primarily from the data.
-    \item Data science studies the computational methods and processes that can extract
-      reliable and ethical knowledge from huge amounts of data.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Data science vs conventional sciences}{}
+%   \begin{itemize}
+%     \item Conventional sciences are model-driven: observation, hypothesis, and validation.
+%     \item In data science, we extract the knowledge directly and primarily from the data.
+%     \item Data science studies the computational methods and processes that can extract
+%       reliable and ethical knowledge from huge amounts of data.
+%   \end{itemize}
+% \end{slidebox}
 
 \section{Fundamental data theory}
 
@@ -205,13 +205,13 @@ Finally, logic is the study of reasoning.  It studies the nature of reasoning an
 argumentation.  In particular, logic studies the nature of inference, validity, and
 fallacies.
 
-\begin{slidebox}{Philosophy}{}
-  \begin{itemize}
-    \item Epistemology: the study of knowledge.
-    \item Ontology: the study of being.
-    \item Logic: the study of reasoning.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Philosophy}{}
+%   \begin{itemize}
+%     \item Epistemology: the study of knowledge.
+%     \item Ontology: the study of being.
+%     \item Logic: the study of reasoning.
+%   \end{itemize}
+% \end{slidebox}
 
 In the context of data science, we usually focus on phenomena from particular domain of
 expertise.  For example, we may be interested in the phenomena related to the stock
@@ -234,18 +234,18 @@ need to guarantee that the data we are collecting are relevant to the problem we
 trying to solve.  Incorrectly perception of the phenomena may lead to incorrect data
 collection, which may lead to incorrect conclusions.
 
-\begin{slidebox}{Phenomena}{}
-  \begin{itemize}
-    \item Phenomena are the source we use to understand the world around us.
-    \item We use our senses to perceive phenomena.
-    \item We use our knowledge and reasoning to make sense of them.
-    \item Computational methods can be used to implement knowledge and reasoning.
-    \item Phenomena are the source of data.
-    \item We need to understand the nature of the phenomena we are studying.
-    \item Incorrectly perception of the phenomena may lead to incorrect data collection,
-      which may lead to incorrect conclusions.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Phenomena}{}
+%   \begin{itemize}
+%     \item Phenomena are the source we use to understand the world around us.
+%     \item We use our senses to perceive phenomena.
+%     \item We use our knowledge and reasoning to make sense of them.
+%     \item Computational methods can be used to implement knowledge and reasoning.
+%     \item Phenomena are the source of data.
+%     \item We need to understand the nature of the phenomena we are studying.
+%     \item Incorrectly perception of the phenomena may lead to incorrect data collection,
+%       which may lead to incorrect conclusions.
+%   \end{itemize}
+% \end{slidebox}
 
 \subsection{Measurements}
 
@@ -280,22 +280,22 @@ subfields, I highlight:
   \item Databases: the study of storing and retrieving data.
 \end{itemize}
 
-\begin{slidebox}{Measurable phenomena}{}
-  \begin{itemize}
-    \item Measurable phenomena are those that we can quantify in some way.
-    \item Data collection is the process of gathering data on targeted phenomenon in an
-      established systematic way.
-    \item The collection/sampling bias influence our conclusions.
-    \item Data storage is the process of storing data in a computer.
-    \item Data are any piece of information that can be digitally stored.
-    \item Data can be stored in many different formats.
-    \item Data can be stored in many different types.
-    \item Data types need to correctly reflect the nature of the source phenomenon and be
-      compatible with the computational methods we are using.
-    \item Algorithms, data structures, and databases are important subfields of computer
-      science when studying data collection, data storage, and data types.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Measurable phenomena}{}
+%   \begin{itemize}
+%     \item Measurable phenomena are those that we can quantify in some way.
+%     \item Data collection is the process of gathering data on targeted phenomenon in an
+%       established systematic way.
+%     \item The collection/sampling bias influence our conclusions.
+%     \item Data storage is the process of storing data in a computer.
+%     \item Data are any piece of information that can be digitally stored.
+%     \item Data can be stored in many different formats.
+%     \item Data can be stored in many different types.
+%     \item Data types need to correctly reflect the nature of the source phenomenon and be
+%       compatible with the computational methods we are using.
+%     \item Algorithms, data structures, and databases are important subfields of computer
+%       science when studying data collection, data storage, and data types.
+%   \end{itemize}
+% \end{slidebox}
 
 \subsection{Knowledge extraction}
 
@@ -332,24 +332,24 @@ corrupt or inaccurate pieces of data.  Data transformation is the process of con
 data from one format or type to another.  Data integration is the process of combining
 data from different sources into a single, unified view.
 
-\begin{slidebox}{Knowledge extraction}{}
-  \begin{itemize}
-    \item We use computational methods to extract knowledge from data.
-    \item Statistics, machine learning, and artificial intelligence are important
-      sciences when studying knowledge extraction.
-    \item Computational methods always have their own assumptions and limitations.
-    \item Data handling is the process of adjusting data to the requirements of the
-      computational methods, which includes:
-    \begin{itemize}
-    \item Data cleaning is the process of detecting and correcting (or removing) corrupt
-      or inaccurate pieces of data.
-    \item Data transformation is the process of converting data from one format or type
-      to another.
-    \item Data integration is the process of combining data from different sources into
-      a single, unified view.
-    \end{itemize}
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Knowledge extraction}{}
+%   \begin{itemize}
+%     \item We use computational methods to extract knowledge from data.
+%     \item Statistics, machine learning, and artificial intelligence are important
+%       sciences when studying knowledge extraction.
+%     \item Computational methods always have their own assumptions and limitations.
+%     \item Data handling is the process of adjusting data to the requirements of the
+%       computational methods, which includes:
+%     \begin{itemize}
+%     \item Data cleaning is the process of detecting and correcting (or removing) corrupt
+%       or inaccurate pieces of data.
+%     \item Data transformation is the process of converting data from one format or type
+%       to another.
+%     \item Data integration is the process of combining data from different sources into
+%       a single, unified view.
+%     \end{itemize}
+%   \end{itemize}
+% \end{slidebox}
 
 \section{Structured data}
 
@@ -409,21 +409,21 @@ easily grows out of control.  The data scientist must take responsibility for th
 consequences of their assumptions.  Good assumptions and hypothesis are a key part of the
 data science methodology.
 
-\begin{slidebox}{Structured data}{}
-  \begin{itemize}
-    \item Structured data are data that are organized in a tabular format.
-    \item Each row in the table represents a single observation.
-    \item Each column represents a variable that describes the observation.
-    \item Each column has a data type.
-    \item The data type restrict the operations we can perform on the data.
-    \item The most common classification of data types is Stevens’s types: nominal,
-      ordinal, interval, and ratio.
-    \item Stevens’s types do not exhaust all possibilities for data types.
-    \item Data scientists should be aware of the data types they are working with and
-      how they affect the analysis.
-    \item Inevitably, data scientists make assumptions about the data types.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Structured data}{}
+%   \begin{itemize}
+%     \item Structured data are data that are organized in a tabular format.
+%     \item Each row in the table represents a single observation.
+%     \item Each column represents a variable that describes the observation.
+%     \item Each column has a data type.
+%     \item The data type restrict the operations we can perform on the data.
+%     \item The most common classification of data types is Stevens’s types: nominal,
+%       ordinal, interval, and ratio.
+%     \item Stevens’s types do not exhaust all possibilities for data types.
+%     \item Data scientists should be aware of the data types they are working with and
+%       how they affect the analysis.
+%     \item Inevitably, data scientists make assumptions about the data types.
+%   \end{itemize}
+% \end{slidebox}
 
 When we work with structured data, two concepts are very important: database normalization
 and tidy data.  Database normalization is mainly focused on the data storage.  Tidy data is
@@ -556,15 +556,15 @@ previous example, the join of the decomposed relations always contains valid tup
 The reason is that all join dependencies implied by the key dependencies are trivial when
 reduced\footnote{\color{red}A proof in under development based on \fullcite{Vincent1997}.}.
 
-\begin{slidebox}{Database normalization}{}
-  \begin{itemize}
-    \item Minimizes data redundancy.
-    \item Improves data integrity.
-    \item Semantics is expressed in terms of dependencies (functional, multivalued, join),
-      which is usually not clear.
-    \item Appropriate to store data.
-  \end{itemize}
-\end{slidebox}
+% \begin{slidebox}{Database normalization}{}
+%   \begin{itemize}
+%     \item Minimizes data redundancy.
+%     \item Improves data integrity.
+%     \item Semantics is expressed in terms of dependencies (functional, multivalued, join),
+%       which is usually not clear.
+%     \item Appropriate to store data.
+%   \end{itemize}
+% \end{slidebox}
 
 \subsection{Tidy data}
 
@@ -582,11 +582,11 @@ normalized databases.  However, most of the statitiscal and machine learning met
 require a particular data format.  Tidy data is a data format that is appropriate to those
 tasks.
 
-\begin{mainbox}{Wickham's thoughts on tidy data}
+\begin{hlbox}{Wickham's thoughts on tidy data}
   \em
   Like families, tidy datasets are all alike but every messy dataset is messy in its own
   way.
-\end{mainbox}
+\end{hlbox}
 
 In an unrestricted table, the meaning of rows and columns are not fixed.  In a tidy table,
 the meaning of rows and columns are fixed.
