--- a/ethics.tex
+++ b/ethics.tex
@@ -1,4 +1,5 @@
 \chapter{Ethical, privacy and legal issues}
+\label{chap:ethics}
 
 \chapterprecishere{It's a trap!
   \par\raggedleft--- \textup{Admiral Ackbar}, Star Wars Episode VI: Return of the Jedi}
