--- a/project.tex
+++ b/project.tex
@@ -1,4 +1,7 @@
 \chapter{Data science project}
+\label{chap:project}
+
+% %TODO: do not forget to talk about doucmentation and deployment
 
 \chapterprecishere{Figured I could throw myself a pity party or go back to school and
 learn the computers. \par\raggedleft--- \textup{Don Carlton}, Monsters University (2013)}
